Creado mediante Colaboratory

--- a/Tarea4.ipynb
+++ b/Tarea4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tarea4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMNW95vp4HmQmkIs2iZKHws",
+      "authorship_tag": "ABX9TyNKSMpN/TYSU/b+pxFZPU9Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,22 +27,143 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bDamfa9plDkd"
+        "id": "bDamfa9plDkd",
+        "outputId": "94a6ffa2-c5a4-4b06-c60b-2259d3cc8849",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
       "source": [
         "def ejemplo4(n):\n",
         "    count = 0\n",
-        "    print(\"Nivel 1\")\n",
         "    i = n\n",
+        "    print(\"Nivel 1\")\n",
         "    while i >= 1:\n",
-        "        print(\"Nivel 2\")\n",
         "        count += 1\n",
         "        i = i // 2\n",
+        "        print(\"Nivel 2\")\n",
         "    basura = 3 + 2\n",
-        "    return count"
+        "    return count\n",
+        "\n",
+        "print(ejemplo4(1), \"\\n\")  \n",
+        "print(ejemplo4(5), \"\\n\")\n",
+        "print(ejemplo4(10), \"\\n\")\n",
+        "print(ejemplo4(100), \"\\n\")\n",
+        "print(ejemplo4(1000), \"\\n\")\n",
+        "print(ejemplo4(10000), \"\\n\")\n",
+        "print(ejemplo4(100000), \"\\n\")\n",
+        "print(ejemplo4(1000000), \"\\n\")"
       ],
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Nivel 1\n",
+            "Nivel 2\n",
+            "1 \n",
+            "\n",
+            "Nivel 1\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "3 \n",
+            "\n",
+            "Nivel 1\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "4 \n",
+            "\n",
+            "Nivel 1\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "7 \n",
+            "\n",
+            "Nivel 1\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "10 \n",
+            "\n",
+            "Nivel 1\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "14 \n",
+            "\n",
+            "Nivel 1\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "17 \n",
+            "\n",
+            "Nivel 1\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "Nivel 2\n",
+            "20 \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
